--- a/css/symcolors.css
+++ b/css/symcolors.css
@@ -1,4 +1,8 @@
-#audusd {
+:root {
+    --sym-text-color: rgba(255, 255, 255, 0.6);
+}
+
+.AUDUSD  {
     background: -moz-linear-gradient(0% 50% 0deg, rgba(0, 175, 79, 1) 0%, rgba(237, 32, 36, 1) 100%);
     background: -webkit-linear-gradient(0deg, rgba(0, 175, 79, 1) 0%, rgba(237, 32, 36, 1) 100%);
     background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(0, 175, 79, 1)), color-stop(1, rgba(237, 32, 36, 1)));
@@ -7,10 +11,10 @@
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
     background: linear-gradient(90deg, rgba(0, 175, 79, 1) 0%, rgba(237, 32, 36, 1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
-    color: white;
+    color: var(--sym-text-color);
 }
 
-#audcad {
+.AUDCAD {
     background: -moz-linear-gradient(0% 50% 0deg, rgba(0, 175, 79, 1) 0%, rgba(217, 150, 148, 1) 100%);
     background: -webkit-linear-gradient(0deg, rgba(0, 175, 79, 1) 0%, rgba(217, 150, 148, 1) 100%);
     background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(0, 175, 79, 1)), color-stop(1, rgba(217, 150, 148, 1)));
@@ -19,10 +23,10 @@
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
     background: linear-gradient(90deg, rgba(0, 175, 79, 1) 0%, rgba(217, 150, 148, 1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
-    color: white;
+    color:  var(--sym-text-color);
 }
 
-#audjpy {
+.AUDJPY {
     background: -moz-linear-gradient(0% 50% 0deg, rgba(0, 175, 79, 1) 0%, rgba(247, 150, 70, 1) 100%);
     background: -webkit-linear-gradient(0deg, rgba(0, 175, 79, 1) 0%, rgba(247, 150, 70, 1) 100%);
     background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(0, 175, 79, 1)), color-stop(1, rgba(247, 150, 70, 1)));
@@ -31,5 +35,258 @@
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
     background: linear-gradient(90deg, rgba(0, 175, 79, 1) 0%, rgba(247, 150, 70, 1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
-    color: white;
+    color:  var(--sym-text-color);
+}
+
+.CADJPY {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(217, 150, 148, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(217, 150, 148, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(217, 150, 148, 1)), color-stop(1, rgba(247, 150, 70, 1)));
+    background: -o-linear-gradient(0deg, rgba(217, 150, 148, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(217, 150, 148, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(217, 150, 148, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.CHFJPY {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(112, 48, 160, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(112, 48, 160, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(112, 48, 160, 1)), color-stop(1, rgba(247, 150, 70, 1)));
+    background: -o-linear-gradient(0deg, rgba(112, 48, 160, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(112, 48, 160, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(112, 48, 160, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.EURAUD {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(0, 176, 240, 1) 0%, rgba(0, 176, 80, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(0, 176, 80, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(0, 176, 240, 1)), color-stop(1, rgba(0, 176, 80, 1)));
+    background: -o-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(0, 176, 80, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(0, 176, 80, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(0, 176, 240, 1) 0%, rgba(0, 176, 80, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.EURGBP {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(0, 176, 240, 1) 0%, rgba(0, 32, 96, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(0, 32, 96, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(0, 176, 240, 1)), color-stop(1, rgba(0, 32, 96, 1)));
+    background: -o-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(0, 32, 96, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(0, 32, 96, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(0, 176, 240, 1) 0%, rgba(0, 32, 96, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.EURJPY {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(0, 176, 240, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(0, 176, 240, 1)), color-stop(1, rgba(247, 150, 70, 1)));
+    background: -o-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(0, 176, 240, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.EURUSD {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(0, 176, 240, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(0, 176, 240, 1)), color-stop(1, rgba(255, 0, 0, 1)));
+    background: -o-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(0, 176, 240, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(0, 176, 240, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.GBPAUD {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(0, 32, 96, 1) 0%, rgba(0, 176, 80, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(0, 176, 80, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(0, 32, 96, 1)), color-stop(1, rgba(0, 176, 80, 1)));
+    background: -o-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(0, 176, 80, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(0, 176, 80, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(0, 32, 96, 1) 0%, rgba(0, 176, 80, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.GBPCHF {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(0, 32, 96, 1) 0%, rgba(112, 48, 160, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(112, 48, 160, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(0, 32, 96, 1)), color-stop(1, rgba(112, 48, 160, 1)));
+    background: -o-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(112, 48, 160, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(112, 48, 160, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(0, 32, 96, 1) 0%, rgba(112, 48, 160, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.GBPJPY {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(0, 32, 96, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(0, 32, 96, 1)), color-stop(1, rgba(247, 150, 70, 1)));
+    background: -o-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(0, 32, 96, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.GBPUSD {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(0, 32, 96, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(0, 32, 96, 1)), color-stop(1, rgba(255, 0, 0, 1)));
+    background: -o-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(0, 32, 96, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(0, 32, 96, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.GOLD {
+    background : -moz-linear-gradient(0% 0% -45deg,rgba(250, 223, 112, 1) 0%,rgba(250, 166, 26, 1) 17.33%,rgba(254, 223, 0, 1) 34.65%,rgba(246, 136, 31, 1) 56.19%,rgba(249, 188, 52, 1) 74.75%,rgba(251, 185, 21, 1) 88.37%,rgba(254, 223, 0, 1) 100%);
+    background : -webkit-linear-gradient(-45deg, rgba(250, 223, 112, 1) 0%, rgba(250, 166, 26, 1) 17.33%, rgba(254, 223, 0, 1) 34.65%, rgba(246, 136, 31, 1) 56.19%, rgba(249, 188, 52, 1) 74.75%, rgba(251, 185, 21, 1) 88.37%, rgba(254, 223, 0, 1) 100%);
+    background : -webkit-gradient(linear,0% 0% ,100% 100% ,color-stop(0,rgba(250, 223, 112, 1) ),color-stop(0.1733,rgba(250, 166, 26, 1) ),color-stop(0.3465,rgba(254, 223, 0, 1) ),color-stop(0.5619,rgba(246, 136, 31, 1) ),color-stop(0.7475,rgba(249, 188, 52, 1) ),color-stop(0.8837,rgba(251, 185, 21, 1) ),color-stop(1,rgba(254, 223, 0, 1) ));
+    background : -o-linear-gradient(-45deg, rgba(250, 223, 112, 1) 0%, rgba(250, 166, 26, 1) 17.33%, rgba(254, 223, 0, 1) 34.65%, rgba(246, 136, 31, 1) 56.19%, rgba(249, 188, 52, 1) 74.75%, rgba(251, 185, 21, 1) 88.37%, rgba(254, 223, 0, 1) 100%);
+    background : -ms-linear-gradient(-45deg, rgba(250, 223, 112, 1) 0%, rgba(250, 166, 26, 1) 17.33%, rgba(254, 223, 0, 1) 34.65%, rgba(246, 136, 31, 1) 56.19%, rgba(249, 188, 52, 1) 74.75%, rgba(251, 185, 21, 1) 88.37%, rgba(254, 223, 0, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#FADF70', endColorstr='#FEDF00' ,GradientType=0)";
+    background : linear-gradient(135deg, rgba(250, 223, 112, 1) 0%, rgba(250, 166, 26, 1) 17.33%, rgba(254, 223, 0, 1) 34.65%, rgba(246, 136, 31, 1) 56.19%, rgba(249, 188, 52, 1) 74.75%, rgba(251, 185, 21, 1) 88.37%, rgba(254, 223, 0, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FADF70',endColorstr='#FEDF00' , GradientType=1);
+    color: rgb(192, 0, 0);
+}
+
+.NZDUSD {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(146, 208, 80, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(146, 208, 80, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(146, 208, 80, 1)), color-stop(1, rgba(255, 0, 0, 1)));
+    background: -o-linear-gradient(0deg, rgba(146, 208, 80, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(146, 208, 80, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(146, 208, 80, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.USDCAD {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(255, 0, 0, 1) 0%, rgba(217, 150, 148, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(217, 150, 148, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(255, 0, 0, 1)), color-stop(1, rgba(217, 150, 148, 1)));
+    background: -o-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(217, 150, 148, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(217, 150, 148, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(255, 0, 0, 1) 0%, rgba(217, 150, 148, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.USDCHF {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(255, 0, 0, 1) 0%, rgba(112, 48, 160, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(112, 48, 160, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(255, 0, 0, 1)), color-stop(1, rgba(112, 48, 160, 1)));
+    background: -o-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(112, 48, 160, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(112, 48, 160, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(255, 0, 0, 1) 0%, rgba(112, 48, 160, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.USDJPY {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(255, 0, 0, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(255, 0, 0, 1)), color-stop(1, rgba(247, 150, 70, 1)));
+    background: -o-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(255, 0, 0, 1) 0%, rgba(247, 150, 70, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.USDMXN {
+    background: -moz-linear-gradient(0% 50% 0deg, rgba(255, 0, 0, 1) 0%, rgba(149, 55, 53, 1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(149, 55, 53, 1) 100%);
+    background: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0, rgba(255, 0, 0, 1)), color-stop(1, rgba(149, 55, 53, 1)));
+    background: -o-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(149, 55, 53, 1) 100%);
+    background: -ms-linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(149, 55, 53, 1) 100%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024' ,GradientType=0)";
+    background: linear-gradient(90deg, rgba(255, 0, 0, 1) 0%, rgba(149, 55, 53, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AF4F', endColorstr='#ED2024', GradientType=1);
+    color:  var(--sym-text-color);
+}
+
+.ADX {
+    background-color: #C00000;
+}
+
+.Classic {
+    background-color: #7230A0;
+}
+
+.Gap {
+    background-color: #FFC000;
+}
+
+.Batman {
+    background-color: #31849B;
+}
+
+.Return {
+    background-color: #0070C0;
+}
+
+.St4 {
+    background-color: #C0504D;
+}
+
+.T200 {
+    background-color: #1F497D;
+}
+
+.TSQ {
+    background-color: #FF66FF;
+}
+
+.X3 {
+    background-color: #00B0F0;
+}
+
+.Zoom {
+    background-color: #008000;
+}
+
+/* timeframes */
+
+.M5 {
+    border-left: 6px solid #E86800;
+}
+.M15 {
+    border-left: 6px solid #FA9F00;
+}
+.M30 {
+    border-left: 6px solid #D7DF22;
+}
+.H1 {
+    border-left: 6px solid #4CC92A;
+}
+.H4 {
+    border-left: 6px solid #00B2ED;
+}
+.D1  {
+    border-left: 6px solid #C39BFF;
 }
