--- a/css/instruments.css
+++ b/css/instruments.css
@@ -1,27 +1,27 @@
-#columnchart_values{
+#columnchart_values {
     width: 100%;
     height: 500px;
 }
 
-.flex-container{
+.flex-container {
     display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  margin: 40px;
-  width: calc(100%-40px);
-  text-decoration: none;
+    justify-content: space-between;
+    flex-direction: row;
+    margin: 40px;
+    width: calc(100%-40px);
+    text-decoration: none;
 }
 
-.instr-button{
+.instr-button {
     width: 50%;
     text-align: center;
-    margin: 6px;
+    margin: 4px;
     padding: 10px;
     font-family: 'Raleway', sans-serif;
-    font-size: 1.2rem;
-    font-weight: 600;
+    font-size: 0.9rem;
+    font-weight: 900;
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.75);
+    border-radius: 5px;
 }
 
 .instr-button:hover {
@@ -36,4 +36,3 @@
     border-radius: 6px;
     overflow: hidden;
 }
-
