--- a/css/sym-strategy.css
+++ b/css/sym-strategy.css
@@ -1,88 +1,5 @@
 
 
-/* ================================ symbol ================================ */
-
-/* ================ nav ================ */
-
-.navbar {
-    position: fixed;
-    top: 0;
-    z-index: 100;
-    display: grid;
-    align-items: center;
-    grid-template-columns: 25% 10% 10% 10% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
-    grid-template-rows: 100px;
-    width: 1800px;
-    background-color: var(--nav-bg-color);
-    font-family: 'Raleway', sans-serif;
-    border-radius: 0 0 6px 6px;
-    overflow: hidden;
-}
-
-.symbol-main {
-    font-family: 'Raleway', sans-serif;
-    background-color: var(--nav-bg-color);
-    font-size: 6.5rem;
-    font-weight: 900;
-    grid-row: 1 / span 2;
-    line-height: 5.8rem;
-}
-
-/* ================ /nav ================ */
-
-/* ================ strats - strats chart ================ */
-
-.chart-wrapper {
-    display: grid;
-    grid-template-columns: 25% 75%;
-    grid-template-rows: 600px;
-    width: 100%;
-    margin: 120px 0 20px 0;
-    border: 1px solid rgb(129, 129, 129);
-    border-radius: 6px;
-    padding-right: 5px;
-    background-color: white;
-    overflow: hidden;
-}
-
-#strats-wrapper {
-    margin-top: 0;
-}
-
-.maestro{
-    grid-column: 1 / 3;
-    text-align: center;
-    font-size: 5rem;
-    font-weight: 100;
-    font-style: italic;
-    padding: 0;
-    margin: 0; 
-    margin-bottom: -50px; 
-    overflow: hidden;
-    line-height: 70px;
-    height: 80px;
-}
-
-#Sym-hozam_chart {
-    height: 500px;
-}
-
-#Sym-lots_chart {
-    height: 100px;
-}
-
-.maestro-charts {
-    border-left: 1px solid rgb(129, 129, 129);
-}
-
-#Strats_chart {
-    height: 100%;
-}
-
-/* ================ /strats - strats chart ================ */
-
-/* ================================ /symbol ================================ */
-
 /* ================================ sym-strategy ================================ */
 
 /* ================ nav ================ */
@@ -93,7 +10,7 @@
     z-index: 100;
     display: grid;
     align-items: center;
-    grid-template-columns: 15% 15% 20% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
+    grid-template-columns: 15% 20% 15% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
     width: 1800px;
     background-color: var(--nav-bg-color);
     font-family: 'Raleway', sans-serif;
@@ -105,30 +22,39 @@
     text-align: center;
     padding: 5px;
     text-decoration: none;
-    font-weight: 400;
+    font-weight: 900;
 }
 
 .sym-navlink {
     color: rgba(255, 255, 255, 0.75);
+    transition: 0.5s;
+    text-shadow: 0px 15px 70px black, 0px 15px 35px rgba(0, 0, 0, 0.746);
 }
 
 .sym-navlink:hover {
     color: rgb(255, 255, 255);
-    text-shadow: 0 0 20px rgb(0, 25, 50);
+    text-shadow: 0 0 60px rgb(162, 221, 255);
+    transition: 0.5s;
 }
 
 .symbol {
     font-size: 3.5rem;
     font-weight: 900;
+    transition: 0.5s;
 }
 
-.symbol:hover {
-    text-shadow: 0 0 20px rgb(0, 25, 50);
+.symbol:hover , .strategy:hover{
+    color: rgb(255, 255, 255);
+    text-shadow: 0 0 60px rgb(162, 221, 255);
+    transition: 0.5s;
 }
 
 .strategy {
-    font-size: 2.8rem;
+    color: rgba(255, 255, 255, 0.75);
+    transition: 0.5s;
+    font-size: 3.5rem;
     font-weight: 900;
+    height: 100%;
 }
 
 /* ================ /nav ================ */
@@ -139,7 +65,7 @@
     display: grid;
     grid-template-columns: 15% 25% 60%;
     width: 100%;
-    margin: 100px 0 20px 0;
+    margin: 20px 0 20px 0;
     border: 1px solid rgb(129, 129, 129);
     border-radius: 6px;
     padding-right: 5px;
@@ -228,3 +154,86 @@
 /* ================ /táblázat ================ */
 
 /* ================================ /sym-strategy ================================ */
+/* ================================ symbol ================================ */
+
+/* ================ nav ================ */
+
+.navbar {
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 25% 10% 10% 10% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
+    grid-template-rows: 100px;
+    width: 1800px;
+    background-color: var(--nav-bg-color);
+    font-family: 'Raleway', sans-serif;
+    border-radius: 0 0 6px 6px;
+    overflow: hidden;
+}
+
+.symbol-main {
+    font-family: 'Raleway', sans-serif;
+    background-color: var(--nav-bg-color);
+    font-size: 6.5rem;
+    font-weight: 900;
+    grid-row: 1 / span 2;
+    line-height: 5.8rem;
+    overflow: hidden;
+}
+
+/* ================ /nav ================ */
+
+/* ================ strats - strats chart ================ */
+
+.chart-wrapper {
+    display: grid;
+    grid-template-columns: 25% 75%;
+    grid-template-rows: 600px;
+    width: 100%;
+    margin: 50px 0 20px 0;
+    border: 1px solid rgb(129, 129, 129);
+    border-radius: 6px;
+    padding-right: 5px;
+    background-color: white;
+    overflow: hidden;
+}
+
+#strats-wrapper {
+    margin-top: 0;
+}
+
+.maestro{
+    grid-column: 1 / 3;
+    text-align: center;
+    font-size: 5rem;
+    font-weight: 100;
+    font-style: italic;
+    padding: 0;
+    margin: 0; 
+    margin-bottom: -50px; 
+    overflow: hidden;
+    line-height: 70px;
+    height: 80px;
+}
+
+#Sym-hozam_chart {
+    height: 500px;
+}
+
+#Sym-lots_chart {
+    height: 100px;
+}
+
+.maestro-charts {
+    border-left: 1px solid rgb(129, 129, 129);
+}
+
+#Strats_chart {
+    height: 100%;
+}
+
+/* ================ /strats - strats chart ================ */
+
+/* ================================ /symbol ================================ */
